--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Buat Nama Lengkap Kalian dibawah:</h1>
-    <p>1. Putu Ade Pranata</p>
+    <p>1. I Made Evan Aditiya</p>
 </body>
 </html>
